# news-rss

./: .gitignore  README.md  news.toml  pyproject.toml
src/news_rss/: __init__.py  cli.py  google.py
