[project]
name = "news-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chdb>=2.1.1",
    "httpx>=0.27.2",
    "rss-parser>=2.1.0",
]

[project.scripts]
news-rss = "news_rss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

